other/restrict-edit-for-endpoints/.chainsaw-test/cr-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: system:aggregate-to-edit
rules:
- apiGroups: [""]
  resources:
  - endpoints
  verbs:
  - edit
